--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -17,6 +17,13 @@ volume = {64},
 pages = {1183-1210}
 }
 
+@article{winkler1990,
+  title={String comparator metrics and enhanced decision rules in the Fellegi-Sunter model of record linkage.},
+  author={Winkler, William E},
+  year={1990},
+  publisher={ERIC}
+}
+
 @book{Tal11,
   title={Entity resolution and information quality},
   author={Talburt, John R},
