add bib reference. small corrections

--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -21,3 +21,11 @@
   year={2012},
   publisher={Courier Corporation}
 }
+
+@misc{expdata2023,
+  title={Experiment Data},
+  author={Andrei Olar},
+  year={2023},
+  howpublished="\url{https://github.com/matchescu/experiment-data}",
+  note={Online; accessed 25.10.2023},
+}
